Make demo store checkout keyless
